tolk-tester/tests/invalid-typing/err-6619.tolk
const asdf = 1 + "";

/**
@compilation_should_fail
@stderr can not apply operator `+` to `int` and `slice`
 */
